# nextgame

.github/workflows/: ci_cd.yaml
api/: Cargo.toml  package.json  pnpm-lock.yaml
api/src/: service.rs
web/: package.json  pnpm-lock.yaml
