[package]
name = "nextgame-api"
description = "Who's playing?!"
authors = ["LOU Xun <aquarhead@gmail.com>"]
repository = "https://github.com/aquarhead/nextgame"
license = "MIT"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7"
worker-kv = "*"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
getrandom = { version = "0.4", features = ["wasm_js"] }
sha3 = { version = "0.11", default-features = false }
hex = { version = "0.4" }
jiff = { version = "0.2", features = ["js", "serde"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
